<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="left"
        android:orientation="vertical"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        tools:context=".CreateAccountActivity">
        <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
            android:gravity="left"
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <TextView android:text="@string/prompt_username"
                android:layout_width="100dp"
                android:layout_height="wrap_content" />

            <EditText android:id="@+id/create_account_username"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:inputType="text" />
        </LinearLayout>

        <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
            android:gravity="left"
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <TextView android:text="@string/prompt_password"
                android:layout_width="100dp"
                android:layout_height="wrap_content" />

            <EditText android:id="@+id/create_account_password"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:inputType="text" />
        </LinearLayout>

        <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
            android:gravity="left"
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <TextView android:text="@string/prompt_first_name"
                android:layout_width="100dp"
                android:layout_height="wrap_content" />

            <EditText android:id="@+id/create_account_first_name"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:inputType="text" />
        </LinearLayout>

        <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
            android:gravity="left"
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <TextView android:text="@string/prompt_last_name"
                android:layout_width="100dp"
                android:layout_height="wrap_content" />

            <EditText android:id="@+id/create_account_last_name"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:inputType="text" />
        </LinearLayout>

        <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
            android:gravity="left"
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <TextView android:text="@string/prompt_email"
                android:layout_width="100dp"
                android:layout_height="wrap_content" />

            <EditText android:id="@+id/create_account_email"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:inputType="text" />
        </LinearLayout>

        <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
            android:gravity="left"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingLeft="24dp"
            android:paddingTop="12dp">
            <CheckBox android:id="@+id/checkbox_meat"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/label_send_email"
                android:onClick="onCheckboxClicked"
                android:paddingLeft="8dp"
                android:textColor="@color/grey_700"/>
        </LinearLayout>

        <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
            android:gravity="left"
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <TextView android:text="@string/label_gender"
                android:layout_width="100dp"
                android:layout_height="wrap_content" />

            <EditText android:id="@+id/create_account_gender"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:inputType="text" />
        </LinearLayout>

        <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
            android:gravity="left"
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <TextView android:text="@string/label_phone_number"
                android:layout_width="100dp"
                android:layout_height="wrap_content" />

            <EditText android:id="@+id/create_account_phone_area_code"
                android:layout_width="45dp"
                android:layout_height="wrap_content"
                android:inputType="text"
                android:hint="@string/prompt_phone_area_code" />

            <EditText android:id="@+id/create_account_phone_number"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:inputType="text"
                android:hint="@string/prompt_phone_number" />
        </LinearLayout>

        <TextView android:text="@string/label_address"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:paddingTop="16dp"
            android:textSize="16dp" />

        <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
            android:gravity="left"
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <TextView android:text="@string/prompt_address_line_1"
                android:layout_width="100dp"
                android:layout_height="wrap_content" />

            <EditText android:id="@+id/create_account_address_line_1"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:inputType="text" />
        </LinearLayout>

        <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
            android:gravity="left"
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <TextView android:text="@string/prompt_address_line_2"
                android:layout_width="100dp"
                android:layout_height="wrap_content" />

            <EditText android:id="@+id/create_account_address_line_2"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:inputType="text" />
        </LinearLayout>

        <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
            android:gravity="left"
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <TextView android:text="@string/prompt_address_city"
                android:layout_width="100dp"
                android:layout_height="wrap_content" />

            <EditText android:id="@+id/create_account_address_city"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:inputType="text" />

            <TextView android:text="@string/label_address_state"
                android:layout_width="50dp"
                android:layout_height="wrap_content"
                android:paddingLeft="8dp"/>

            <EditText android:id="@+id/create_account_address_state"
                android:layout_width="50dp"
                android:layout_height="wrap_content"
                android:inputType="text" />
        </LinearLayout>

        <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
            android:gravity="left"
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <TextView android:text="@string/label_address_postal_code"
                android:layout_width="100dp"
                android:layout_height="wrap_content" />

            <EditText android:id="@+id/create_account_address_postal_code"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:inputType="text" />
        </LinearLayout>

        <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
            android:gravity="left"
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <TextView android:text="@string/prompt_address_country_code"
                android:layout_width="100dp"
                android:layout_height="wrap_content" />

            <EditText android:id="@+id/create_account_address_country_code"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:inputType="text" />
        </LinearLayout>

        <Button android:id="@+id/email_sign_in_button"
            style="?android:textAppearanceSmall"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/label_create_account"
            android:textStyle="bold" />
    </LinearLayout>
</ScrollView>